bugfix: fixed header image's proportions on mobile devices

--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -96,11 +96,11 @@ a {
   }
 
   @include medium {
-    padding: 1.5rem 4rem 4rem 2rem;
+    padding: 1.5rem 4rem 2rem 2rem;
   }
 
   @include small {
-    padding: 1.5rem 4rem 4rem 2rem;
+    padding: 1.5rem 4rem 2rem 2rem;
   }
 }
 
